--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -3,12 +3,27 @@
   become_user: root
   tasks:
     - name: Install http server
-      yum:
+      yum: 
         name: httpd
 
     - name: Start http server
-      service:
+      service: 
         name: httpd
         state: started
         enabled: yes
+
+    - name: Set 00-mpm.conf
+      template:
+        src: 00-mpm.conf.j2
+        dest: /etc/httpd/conf.modules.d/00-mpm.conf
+        owner: root
+        group: root
+        mode: 0644
+      notify: Restart httpd
+
+  handlers:
+    - name: Restart httpd
+      service: 
+        name: httpd
+        state: restarted
 
