--- a/ansible/playbook-role.yml
+++ b/ansible/playbook-role.yml
@@ -9,3 +9,4 @@
     - httpd
     - {role: sudoers/allow-all, group_name: group_a}
     - {role: sudoers/allow-httpd, group_name: group_b}
+    - jenkins
