service module - start jenkins

--- a/ansible/roles/jenkins/tasks/main.yml
+++ b/ansible/roles/jenkins/tasks/main.yml
@@ -1,3 +1,9 @@
 - name: "Install jenkins"
   yum:
     name: jenkins
+
+- name: Start jenkins server
+  service:
+    name: jenkins
+    state: started
+    enabled: yes
