--- a/ansible/roles/yum_repository/jenkins/tasks/main.yml
+++ b/ansible/roles/yum_repository/jenkins/tasks/main.yml
@@ -6,4 +6,5 @@
 
 - name: "Install jenkins-ci.org.key"
   rpm_key:
+    state: present
     key: "http://pkg.jenkins-ci.org/redhat/jenkins-ci.org.key"
