--- a/ansible/playbook-role.yml
+++ b/ansible/playbook-role.yml
@@ -10,3 +10,4 @@
     - {role: sudoers/allow-all, group_name: group_a}
     - {role: sudoers/allow-httpd, group_name: group_b}
     - jenkins
+    - cron/yum_autoupdate
