use Ansible Galaxy - add eerlingguy.mysql

--- a/ansible/roles/jenkins/tasks/main.yml
+++ b/ansible/roles/jenkins/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: "Install Java"
+  yum: 
+    name: java-1.8.0-openjdk
+    state: present
+
 - name: "Install jenkins"
   yum:
     name: jenkins
