--- a/ansible/playbook-role.yml
+++ b/ansible/playbook-role.yml
@@ -16,6 +16,8 @@
 - hosts: ec2-sandbox
   become: yes
   become_user: root
+  vars:
+    - ansible_distribution_major_version: 7
   tasks:
   roles:
     - hostname
@@ -27,3 +29,21 @@
     - jenkins
     - cron/yum_autoupdate
     - samples/shell
+    - role: geerlingguy.mysql
+      mysql_root_password: hogehoge
+      mysql_databases:
+        - name: l4a_db
+          encoding: utf8
+          collation: utf8_unicode_ci
+        - name: guestbook
+          encoding: utf8
+          collation: utf8_unicode_ci 
+      mysql_users:
+        - name: l4a_user
+          host: "%"
+          password: fugafuga
+          priv: "l4a_db.*:ALL"
+        - name: guestbook
+          host: "%"
+          password: guestbookpass
+          priv: "guestbook.*:ALL"
