--- a/sandbox/Vagrantfile
+++ b/sandbox/Vagrantfile
@@ -6,7 +6,10 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "virtualbox" do |v|
     v.name = "l4a-sandbox"
-    v.customize ["modifyvm", :id, "--memory", "1024"]
+    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    v.gui = false
+    v.cpus = 4
+    v.memory = "4096"
   end
 
   config.vm.network "private_network", ip: "192.168.149.11"
